[tool.poetry]
name = "sysbib-feap"
version = "0.1.0"
description = ""
authors = ["Audrey Cardoso <audreyrdsc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
